--- a/watchLight WatchKit App/Base.lproj/Interface.storyboard
+++ b/watchLight WatchKit App/Base.lproj/Interface.storyboard
@@ -11,11 +11,19 @@
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="watchLight_WatchKit_App" customModuleProvider="target">
                     <items>
                         <group width="1" height="151" alignment="left" id="Vz2-vC-ylf">
+                            <items>
+                                <button width="1" alignment="left" backgroundImage="lightButtonBackground" id="nRe-Nc-hdF">
+                                    <connections>
+                                        <action selector="onLightTap" destination="AgC-eL-Hgc" id="MG0-WN-1Dm"/>
+                                    </connections>
+                                </button>
+                            </items>
                             <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="0.0"/>
                         </group>
                     </items>
                     <connections>
                         <outlet property="interfaceGroup" destination="Vz2-vC-ylf" id="3Q8-8h-Sqg"/>
+                        <outlet property="lightButton" destination="nRe-Nc-hdF" id="IY3-jM-HzW"/>
                     </connections>
                 </controller>
             </objects>
